package handler

import (
	"context"
	pb "thaily/proto/thesis"
)


func (h *Handler) CreateEnrollment(ctx context.Context, req *pb.CreateEnrollmentRequest) (*pb.CreateEnrollmentResponse, error) {
	// TODO: Implement CreateEnrollment
	return &pb.CreateEnrollmentResponse{}, nil
}

func (h *Handler) GetEnrollment(ctx context.Context, req *pb.GetEnrollmentRequest) (*pb.GetEnrollmentResponse, error) {
	// TODO: Implement GetEnrollment
	return &pb.GetEnrollmentResponse{}, nil
}

func (h *Handler) UpdateEnrollment(ctx context.Context, req *pb.UpdateEnrollmentRequest) (*pb.UpdateEnrollmentResponse, error) {
	// TODO: Implement UpdateEnrollment
	return &pb.UpdateEnrollmentResponse{}, nil
}

func (h *Handler) DeleteEnrollment(ctx context.Context, req *pb.DeleteEnrollmentRequest) (*pb.DeleteEnrollmentResponse, error) {
	// TODO: Implement DeleteEnrollment
	return &pb.DeleteEnrollmentResponse{}, nil
}

func (h *Handler) ListEnrollments(ctx context.Context, req *pb.ListEnrollmentsRequest) (*pb.ListEnrollmentsResponse, error) {
	// TODO: Implement ListEnrollments
	return &pb.ListEnrollmentsResponse{}, nil
}

