package handler

import (
	"context"
	pb "thaily/proto/thesis"
)


func (h *Handler) CreateFinal(ctx context.Context, req *pb.CreateFinalRequest) (*pb.CreateFinalResponse, error) {
	// TODO: Implement CreateFinal
	return &pb.CreateFinalResponse{}, nil
}

func (h *Handler) GetFinal(ctx context.Context, req *pb.GetFinalRequest) (*pb.GetFinalResponse, error) {
	// TODO: Implement GetFinal
	return &pb.GetFinalResponse{}, nil
}

func (h *Handler) UpdateFinal(ctx context.Context, req *pb.UpdateFinalRequest) (*pb.UpdateFinalResponse, error) {
	// TODO: Implement UpdateFinal
	return &pb.UpdateFinalResponse{}, nil
}

func (h *Handler) DeleteFinal(ctx context.Context, req *pb.DeleteFinalRequest) (*pb.DeleteFinalResponse, error) {
	// TODO: Implement DeleteFinal
	return &pb.DeleteFinalResponse{}, nil
}

func (h *Handler) ListFinals(ctx context.Context, req *pb.ListFinalsRequest) (*pb.ListFinalsResponse, error) {
	// TODO: Implement ListFinals
	return &pb.ListFinalsResponse{}, nil
}

