package handler

import (
	"context"
	pb "thaily/proto/thesis"
)


func (h *Handler) CreateMidterm(ctx context.Context, req *pb.CreateMidtermRequest) (*pb.CreateMidtermResponse, error) {
	// TODO: Implement CreateMidterm
	return &pb.CreateMidtermResponse{}, nil
}

func (h *Handler) GetMidterm(ctx context.Context, req *pb.GetMidtermRequest) (*pb.GetMidtermResponse, error) {
	// TODO: Implement GetMidterm
	return &pb.GetMidtermResponse{}, nil
}

func (h *Handler) UpdateMidterm(ctx context.Context, req *pb.UpdateMidtermRequest) (*pb.UpdateMidtermResponse, error) {
	// TODO: Implement UpdateMidterm
	return &pb.UpdateMidtermResponse{}, nil
}

func (h *Handler) DeleteMidterm(ctx context.Context, req *pb.DeleteMidtermRequest) (*pb.DeleteMidtermResponse, error) {
	// TODO: Implement DeleteMidterm
	return &pb.DeleteMidtermResponse{}, nil
}

func (h *Handler) ListMidterms(ctx context.Context, req *pb.ListMidtermsRequest) (*pb.ListMidtermsResponse, error) {
	// TODO: Implement ListMidterms
	return &pb.ListMidtermsResponse{}, nil
}

